--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,21 +15,41 @@ jobs:
         run: |
           go test -v -covermode=count -coverprofile=ocpp16.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp1.6/... github.com/lorenzodonini/ocpp-go/ocpp1.6_test
           go test -v -covermode=count -coverprofile=ocpp201.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp2.0.1/... github.com/lorenzodonini/ocpp-go/ocpp2.0.1_test
+          sed '1d;$d' ocpp16.out >> coverage.out
+          sed '1d;$d' ocpp201.out >> coverage.out
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: ./coverage.out
 
   integration:
     runs-on: ubuntu-latest
+    needs: unit
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Setup toxiproxy
+      - name: Download coverage from unit tests
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage
+      - name: Run integration tests
         run: |
           docker compose -f docker-compose.test.yaml up integration_test
       - name: Wait for integration_test to finish
         run: |
-          while [ "$(docker inspect -f '{{.State.Running}}' $(docker-compose -f docker-compose.test.yaml ps -q integration_test))" == "true" ]; do
+          while [ "$(docker inspect -f '{{.State.Running}}' $(docker compose -f docker-compose.test.yaml ps -q integration_test))" == "true" ]; do
             echo "Waiting for integration_test to finish..."
             sleep 5
           done
+      - name: Merge coverage
+        run: |
+          sed '1d;$d' integration_coverage.out >> coverage.out
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: ./coverage.out
 
   publish_coverage:
     runs-on: ubuntu-latest
@@ -41,10 +61,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install goveralls
         run: go install github.com/mattn/goveralls@latest
-      - name: Merge coverage
-        run: |
-          sed '1d;$d' ocpp16.out >> coverage.out
-          sed '1d;$d' ocpp201.out >> coverage.out
+      - name: Download coverage from unit tests
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage
       - name: Publish
         env:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
