--- a/.github/workflows/autogen.yaml
+++ b/.github/workflows/autogen.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}
+          ref: ${{ github.head_ref }}
 
       - name: Setup Go
         uses: actions/setup-go@v5
