--- a/example/2.0.1/docker-compose.tls.yml
+++ b/example/2.0.1/docker-compose.tls.yml
@@ -15,6 +15,8 @@ services:
       - CA_CERTIFICATE_PATH=/usr/local/share/certs/ca.crt
       - SERVER_CERTIFICATE_PATH=/usr/local/share/certs/csms.crt
       - SERVER_CERTIFICATE_KEY_PATH=/usr/local/share/certs/csms.key
+      - METRICS_ENABLED=${METRICS_ENABLED:-false}
+      - METRICS_ADDRESS=${METRICS_ADDRESS:-lgtm-stack:4317}
     ports:
       - "443:443"
     networks:
