feat: added k6 and profiling for ocpp system

--- a/example/docker-compose.observability.yaml
+++ b/example/docker-compose.observability.yaml
@@ -23,7 +23,7 @@ services:
     ports:
       - "3000:3000" # Grafana
       - "4317:4317" # OTLP gRPC receiver
-      - "9097:9097" # Pyroscope (profiling)
+      - "4040:4040" # Pyroscope
       - "9090:9090" # Prometheus
 
 networks:
