--- a/example/1.6/docker-compose.k6.yml
+++ b/example/1.6/docker-compose.k6.yml
@@ -25,7 +25,7 @@ services:
     image: grafana/k6:latest
     container_name: k6
     # Run the performance tests
-    command: run -o experimental-prometheus-rw /scripts/disconnects.ts --vus 10 --duration 1m
+    command: run -o experimental-prometheus-rw /scripts/rapid-connect-disconnect.ts --vus 10 --duration 1m
     depends_on:
       - central-system
       - grafana-lgtm-stack
