--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4.2.2
       - name: Run tests
         run: |
-          docker compose -f docker-compose.test.yaml up unit_test --abort-on-container-exit
+          make test-docker
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
         with:
