--- a/example/2.0.1/docker-compose.yml
+++ b/example/2.0.1/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "8887:8887"
     networks:
       - sim
-    tty: true
+    # tty: true
   charging-station:
     build:
       context: ../..
@@ -26,7 +26,7 @@ services:
       - CSMS_URL=ws://csms:8887
     networks:
       - sim
-    tty: true
+    # tty: true
 
 networks:
   sim:
