--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,19 +55,26 @@ jobs:
     name: Performance tests
     runs-on: ubuntu-latest
     needs: unit
+    permissions:
+      pull-requests: write
+      packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
 
       - name: Run OCPP 1.6 performance tests
+        id: ocpp16-perf-test
         run: |
           make perf-tests-ocpp16-ci
+          echo "SUMMARY_16=$(jq -r './results' summary_16.json)" >> "$GITHUB_OUTPUT"
 
       - name: Run OCPP 2.0.1 performance tests
+        id: ocpp201-perf-test
         run: |
           make perf-tests-ocpp201-ci
+          echo "SUMMARY_201=$(jq -r './results' summary_201.json)" >> "$GITHUB_OUTPUT"
 
-      - name: Report performance  test results
+      - name: Report performance test results
         uses: actions/upload-artifact@v4
         with:
           path: ./results
@@ -75,24 +82,16 @@ jobs:
           retention-days: 14
 
       - name: Post summary to PR
-        uses: actions/github-script@v6
+        continue-on-error: true
+        uses: thollander/actions-comment-pull-request@v3
+        if: github.event_name == 'pull_request'
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const path = "./results/summary_201.json"
-            const pr = context.payload.pull_request;
-            if (fs.existsSync(path)) {
-               let content = fs.readFileSync(path, 'utf8').trim();
-               if (content.length > 6000) content = content.slice(0, 6000) + '\n\n(truncated)';
-               body = `### ${process.env.TITLE}\n\`\`\`\n${content}\n\`\`\``;
-               await github.rest.issues.createComment({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: pr.number,
-                  body
-               })
-            }
+          message: |
+            ## Performance Test Results
+            ${{steps.ocpp16-perf-test.outputs.SUMMARY_16}}
+            ${{steps.ocpp201-perf-test.outputs.SUMMARY_201}}
+          pr-number: ${{ github.event.pull_request.number }}
+          comment-tag: execution
 
   publish_coverage:
     runs-on: ubuntu-latest
