--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,6 @@ on:
       - LICENSE
 
   workflow_dispatch:
-
 jobs:
   unit:
     runs-on: ubuntu-latest
@@ -54,7 +53,6 @@ jobs:
   performance:
     name: Performance tests
     runs-on: ubuntu-latest
-    needs: unit
     permissions:
       pull-requests: write
       packages: write
@@ -66,18 +64,18 @@ jobs:
         id: ocpp16-perf-test
         run: |
           make perf-tests-ocpp16-ci
-          echo "SUMMARY_16=$(jq -r './results' summary_16.json)" >> "$GITHUB_OUTPUT"
+          echo "SUMMARY_16=$(jq -r '${{ github.workspace }}/results' summary_16.json)" >> "$GITHUB_OUTPUT"
 
       - name: Run OCPP 2.0.1 performance tests
         id: ocpp201-perf-test
         run: |
           make perf-tests-ocpp201-ci
-          echo "SUMMARY_201=$(jq -r './results' summary_201.json)" >> "$GITHUB_OUTPUT"
+          echo "SUMMARY_201=$(jq -r '${{ github.workspace }}/results' summary_201.json)" >> "$GITHUB_OUTPUT"
 
       - name: Report performance test results
         uses: actions/upload-artifact@v4
         with:
-          path: ./results
+          path: ${{ github.workspace }}/results
           name: performance_test_results_${{ github.sha }}
           retention-days: 14
 
@@ -88,8 +86,17 @@ jobs:
         with:
           message: |
             ## Performance Test Results
+            
+            ### OCPP 1.6
+            ```json
             ${{steps.ocpp16-perf-test.outputs.SUMMARY_16}}
+            ```
+            
+            ### OCPP 2.0.1
+            ```json
             ${{steps.ocpp201-perf-test.outputs.SUMMARY_201}}
+            ```
+
           pr-number: ${{ github.event.pull_request.number }}
           comment-tag: execution
 
