--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -16,6 +16,8 @@ services:
       - /bin/bash
       - -c
       - |
+        set -e
+        set -o pipefail
         go test -v -covermode=count -coverprofile=coverage.out ./ocppj
         go test -v -covermode=count -coverprofile=ocpp-coverage.out ./ocpp
         go test -v -covermode=count -coverprofile=ocpp-coverage.out ./ocpp
@@ -41,6 +43,9 @@ services:
     command:
       - /bin/bash
       - -c
-      - go test ./ws -v -covermode=count -coverprofile=integration_coverage.out
+      - |
+        set -e
+        set -o pipefail
+        go test ./ws -v -covermode=count -coverprofile=integration_coverage.out
     volumes:
       - .:/etc/ocpp-go:rw
