fix: add intenal to unit test coverage

--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -17,8 +17,10 @@ services:
       - -c
       - |
         go test -v -covermode=count -coverprofile=coverage.out ./ocppj
+        go test -v -covermode=count -coverprofile=internal.out github.com/lorenzodonini/ocpp-go/internal/...
         go test -v -covermode=count -coverprofile=ocpp16.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp1.6/... github.com/lorenzodonini/ocpp-go/ocpp1.6_test
         go test -v -covermode=count -coverprofile=ocpp201.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp2.0.1/... github.com/lorenzodonini/ocpp-go/ocpp2.0.1_test
+        sed '1d;$d' internal.out >> coverage.out
         sed '1d;$d' ocpp16.out >> coverage.out
         sed '1d;$d' ocpp201.out >> coverage.out
 
