chore: add 2.1 perf tests to ci

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -152,6 +152,12 @@ jobs:
           ' ${{ github.workspace }}/example/2.0.1/results/summary_201.json >> "$GITHUB_OUTPUT"
           echo "EOF" >> "$GITHUB_OUTPUT"
 
+      - name: Run OCPP 2.1 performance tests
+        id: ocpp21-perf-test
+        run: |
+          make perf-tests-ocpp21-ci
+          echo "SUMMARY_21=$(jq -r '${{ github.workspace }}/results' summary_21.json)" >> "$GITHUB_OUTPUT"
+
       - name: Report performance test results
         uses: actions/upload-artifact@v6
         with:
@@ -172,6 +178,11 @@ jobs:
             
             ### OCPP 2.0.1
             ${{steps.ocpp201-perf-test.outputs.SUMMARY_201}}
+
+             ### OCPP 2.0.1
+            ```json
+            ${{steps.ocpp21-perf-test.outputs.SUMMARY_21}}
+            ```
 
           pr-number: ${{ github.event.pull_request.number }}
           comment-tag: execution
