--- a/example/2.1/csms/Dockerfile
+++ b/example/2.1/csms/Dockerfile
@@ -1,7 +1,7 @@
 ############################
 # STEP 1 build executable binary
 ############################
-FROM golang:alpine AS builder
+FROM golang:1.25-alpine AS builder
 
 ENV GO111MODULE on
 WORKDIR $GOPATH/src/github.com/xBlaz3kx/ocpp-go
