chore: add ocpp 2.1 as an option in issue templates

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -44,6 +44,8 @@ body:
           required: false
         - label: "OCPP 2.0.1"
           required: false
+        - label: "OCPP 2.1"
+          required: false
   - type: checkboxes
     id: ocpp-extensions
     attributes:
