fix: ocpp 2.1 performance tests

--- a/example/2.1/docker-compose.yml
+++ b/example/2.1/docker-compose.yml
@@ -3,16 +3,20 @@ services:
   csms:
     build:
       context: ../..
-      dockerfile: csms/Dockerfile
+      dockerfile: example/2.1/csms/Dockerfile
     image: ldonini/ocpp2.1-csms:latest
     container_name: csms
     environment:
       - SERVER_LISTEN_PORT=8887
+      - METRICS_ENABLED=${METRICS_ENABLED:-false}
+      - METRICS_ADDRESS=${METRICS_ADDRESS:-lgtm-stack:4317}
+      - PROFILING_ENABLED=${PROFILING_ENABLED:-false}
+      - PYROSCOPE_ADDRESS=${PYROSCOPE_ADDRESS:-http://lgtm-stack:4040}
     ports:
       - "8887:8887"
     networks:
       - sim
-    tty: true
+    # tty: true
 
   charging-station:
     build:
@@ -25,7 +29,7 @@ services:
       - CSMS_URL=ws://csms:8887
     networks:
       - sim
-    tty: true
+    # tty: true
 
 networks:
   sim:
