--- a/example/2.1/docker-compose.k6.yml
+++ b/example/2.1/docker-compose.k6.yml
@@ -1,22 +1,14 @@
 version: '3.9'
 services:
-  cpms:
-    build:
-      context: ../..
-      dockerfile: example/2.1/csms/Dockerfile
-    image: ldonini/ocpp2.1-cpms:latest
-    container_name: cpms
+  csms:
     environment:
       - METRICS_ENABLED=${METRICS_ENABLED:-true}
       - METRICS_ADDRESS=${METRICS_ADDRESS:-lgtm-stack:4317}
       - PROFILING_ENABLED=${PROFILING_ENABLED:-true}
       - PYROSCOPE_ADDRESS=${PYROSCOPE_ADDRESS:-http://lgtm-stack:4040}
-      - SERVER_LISTEN_PORT=8887
-    ports:
-      - "8887:8887"
     networks:
       - sim
-    tty: true
+    #tty: true
 
   k6:
     image: grafana/k6:latest
