--- a/.github/workflows/autogen.yaml
+++ b/.github/workflows/autogen.yaml
@@ -36,7 +36,16 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v6
         with:
-          go-version: 1.17
+          go-version-file: go.mod
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
       - name: Install Mockery
         uses: jaxxstorm/action-install-gh-release@v2.1.0
